:bug: fix child-parent relationship's margin collapsing

--- a/003_travel_page/styles.css
+++ b/003_travel_page/styles.css
@@ -56,6 +56,7 @@
 #highlights {
   text-align: center;
   text-transform: uppercase;
+  padding: 24px;
 }
 
 #highlights h2 {
